Add Maven build and packaging instructions to README
Expanded the README with detailed instructions for building, packaging, and running JavaFX projects using Maven. Includes explanations of core Maven targets, running applications, troubleshooting, and advanced Maven commands to assist developers in managing the project.